# hw06-norimer

./: .buildinfo  Makefile  README.html  _config.yml  conf.py  demo.html  genindex.html  hw06-description.html  index.html  index.ipynb  intro.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: README.doctree  demo.doctree  intro.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_build/html/: demo.html  genindex.html  hw06-description.html  objects.inv  searchindex.js
_build/html/.doctrees/: environment.pickle  hw06-description.doctree  index.doctree
_build/html/_sources/: README.md
_build/jupyter_execute/: demo.ipynb  demo.py  index.ipynb  index.py
_sources/: demo.ipynb  index.ipynb
ligotools/: __init__.py  setup.cfg  untitled.py  untitled1.py  utils.py
ligotools/.pytest_cache/: README.html
ligotools/tests/: test_readligo.py  test_utils.py
